[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "higi"
version = "0.1.2"
description = "The universal runtime resilience and self-healing engine for modern Python applications."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "JANAPAREDDY GIRI SAI DURGA", email = "girisaidurgajanapareddy@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sai8555/higi---module"

[tool.hatch.build.targets.sdist]
exclude = ["venv"]

[tool.hatch.build.targets.wheel]
exclude = ["venv"]




